--- a/Lucky_game/src/lucky_game/FXMLDocument.fxml
+++ b/Lucky_game/src/lucky_game/FXMLDocument.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="535.0" style="-fx-background-image: url('/image_res/cover.jpg');" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lucky_game.FXMLDocumentController">
     <children>
-      <ImageView fx:id="cover_img" fitHeight="340.0" fitWidth="536.0" pickOnBounds="true" style="-fx-effect: &quot;gaussian-blur(10)&quot;;">
+      <ImageView fx:id="cover_img" fitHeight="340.0" fitWidth="536.0" pickOnBounds="true">
          <image>
             <Image url="@image_res/cover.jpg" />
          </image>
@@ -38,7 +38,7 @@
                </font>
             </Label>
             <Label layoutX="37.0" layoutY="203.0" text="Don't have an account?" />
-            <Label fx:id="btn_sign_up" layoutX="172.0" layoutY="203.0" style="-fx-underline: true; -fx-cursor: hand;" text="Sign up">
+            <Label fx:id="btn_sign_up" layoutX="172.0" layoutY="203.0" onMouseClicked="#handleSignUp" style="-fx-underline: true; -fx-cursor: hand;" text="Sign up">
                <font>
                   <Font name="System Italic" size="12.0" />
                </font>
